--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ I'm passionate about studying Physics and Astronomy, along with recent technolog
       </td>
     </tr>
     <tr>
-      <td>My Article about number of research publications from Bangladesh over the years, Published in<a href= https://www.tbsnews.net/thoughts/judging-quantity-how-well-bangladesh-faring-research-505990>The Business Standard</a> </td>
+      <td>My Article about the number of research publications from Bangladesh over the years, Published in<a href= https://www.tbsnews.net/thoughts/judging-quantity-how-well-bangladesh-faring-research-505990>The Business Standard</a> </td>
       <td>
         <div class="image-container">
           <img src="3.png" alt="Image 3">
@@ -252,8 +252,6 @@ I'm passionate about studying Physics and Astronomy, along with recent technolog
 </table>
 
 </section>
-	
-	
 
 <section id="blog" class="content-section" style="text-align: center;">
   <h1>My BlogPosts</h1>
@@ -270,7 +268,7 @@ I'm passionate about studying Physics and Astronomy, along with recent technolog
 
 <section id="tools" class="content-section" style="text-align: center;">
   <h1>My Tools</h1>
-  <p style="text-align: justify;">Actually, I have lost most of my codes. The followings are some of the tools that I have programmed/Developed over the years</p>
+  <p style="text-align: justify;">Actually, I have lost most of my codes. The following are some of the tools that I have programmed/Developed over the years</p>
   
   <table>
   
@@ -286,8 +284,8 @@ I'm passionate about studying Physics and Astronomy, along with recent technolog
     <tr>
       <td>For my Master's Thesis I developed 'SMES-PCC' which stands for Superconducting magnetic energy
 storage(SMES) parameter calculation and characteristics. It is programmed/Developed for both the solenoid and
-toroid configuration. This program is developed in Microsoft visual Studio 2010.This program is also capable of
-showing relationship between several parameters. <a href= SMES-PCC.exe >Download the .exe file from here</a> Also you can read the paper describing the equations,flowchart and UI for this software from <a href= https://myjms.mohe.gov.my/index.php/masshp/article/view/4917 >here</a>
+toroid configuration. This program is developed in Microsoft Visual Studio 2010. This program is also capable of
+showing the relationship between several parameters. <a href= SMES-PCC.exe >Download the .exe file from here</a> Also you can read the paper describing the equations,flowchart and UI for this software from <a href= https://myjms.mohe.gov.my/index.php/masshp/article/view/4917 >here</a>
       <td>
         <div class="image-container">
           <img src="smes.png" alt="Image 2">
@@ -304,7 +302,7 @@ showing relationship between several parameters. <a href= SMES-PCC.exe >Download
     </tr>
 	
 	<tr>
-      <td>Emergency Bangladesh is/was an android app containing most of the Emergency contact information (like Hospitals, Police Station, FireService, Ambulance), Maps, Blood Donors etc. in Bangladesh upto 2017. It was selected as one of the top 30 apps (out of 500) in EATL Prothom Alo Apps Challenge 2016, lead sponsor: The World Bank, Supported by :Canda Government and ICT division,Bangladesh. The EATL appstore is still showing this app but the source file (.apk) is not available. Also probably it will not run in most of the android smartphones as I did not update the version </td>
+      <td>Emergency Bangladesh is/was an Android app containing most of the Emergency contact information (like Hospitals, Police stations, fire service, Ambulance), Maps, Blood Donors etc. in Bangladesh upto 2017. It was selected as one of the top 30 apps (out of 500) in EATL Prothom Alo Apps Challenge 2016, lead sponsor: The World Bank, Supported by :Canda Government and ICT division,Bangladesh. The EATL appstore is still showing this app but the source file (.apk) is not available. Also probably it will not run in most of the android smartphones as I did not update the version </td>
       <td>
         <div class="image-container">
           <img src="eb.png" alt="Image 3">
@@ -318,7 +316,7 @@ showing relationship between several parameters. <a href= SMES-PCC.exe >Download
 
 <section id="cv" class="content-section" style="text-align: center;">
   <h1>My CV</h1>
-  <p style="text-align: justify;"> Download my CV <a href="CV_Md_Abdullah_Al_Zaman.pdf">here</a>.</p>
+  <p style="text-align: justify;"> Download my CV from <a href="CV_Md_Abdullah_Al_Zaman.pdf">here</a>.</p>
 </section>
 
     <footer
