--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ I'm passionate about studying Physics and Astronomy, along with recent technolog
 
 <section id="research" class="content-section" style="text-align: center;">
   <h1>My Research</h1>
-  <p style="text-align: justify;">My current research focuses on areas like Astronomical Data Analysis, exoplanet detection, Parameters relevant to exoplanets, galaxy formation/morphology/Star Formation Rate/SED and so on. For the last 4-5 years My work has been revolving around Space radiation, Space Safety, designing effective radiation shields for space missions. I used tools such as GEANT4, OLTARIS, SPENVIS, SRIM, NSRL, X-COM, PHY_X/PSD,  and MATLAB. Here is a Concept cloud of my research from <a href= https://scixplorer.org/search?q=Al+Zaman%2C+Md+Abdullah&sort=score+desc&sort=date+desc&p=1>Science Explorer (NASA) </a> for the last few years, its not acurate but you will get some idea for sure </p> &nbsp; <img src="cc.png"> 
+  <p style="text-align: justify;">My current research focuses on areas like Astronomical Data Analysis, exoplanet detection, Parameters relevant to exoplanets, galaxy formation/morphology/Star Formation Rate/SED and so on. For the last 4-5 years My work has been revolving around Space radiation, Space Safety, designing effective radiation shields for space missions. I used tools such as GEANT4, OLTARIS, SPENVIS, SRIM, NSRL, X-COM, PHY_X/PSD,  and MATLAB. Here is a Concept cloud of my research from <a href= https://scixplorer.org/search?q=Al+Zaman%2C+Md+Abdullah&sort=score+desc&sort=date+desc&p=1>Science Explorer (NASA) </a> for the last few years, its not acurate but you will get some idea for sure </p> &nbsp; <img src="cc.png" class="responsive"> 
   </section>
 
 <section id="media" class="content-section" style="text-align: center;">
