--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item"><a class="nav-link" data-target="#about" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link" data-target="#research" href="#">Research</a></li>
-                <li class="nav-item"><a class="nav-link" data-target="#media" href="#">Media Presence</a></li>
                 <li class="nav-item"><a class="nav-link" data-target="#blog" href="#">My Blog</a></li>
                 <li class="nav-item"><a class="nav-link" data-target="#tools" href="#">My Tools</a></li>
+		<li class="nav-item"><a class="nav-link" data-target="#media" href="#">Media Presence</a></li>
                 <li class="nav-item"><a class="nav-link" data-target="#cv" href="CV_Md_Abdullah_Al_Zaman.pdf">CV</a></li>
             </ul>
         </div>
@@ -206,7 +206,7 @@ I'm passionate about studying Physics and Astronomy, along with recent technolog
 
 <section id="research" class="content-section" style="text-align: center;">
   <h1>My Research</h1>
-  <p style="text-align: justify;">My current research focuses on areas like Astronomical Data Analysis, exoplanet detection, Parameters relevant to exoplanets, galaxy formation/morphology/Star Formation Rate/SED and so on. For the last 4-5 years My work has been revolving around Space radiation, Space Safety, designing effective radiation shields for space missions. I used tools such as GEANT4, OLTARIS, SPENVIS, SRIM, NSRL, X-COM, PHY_X/PSD,  and MATLAB. Here is a Concept cloud of my research from <a href= https://scixplorer.org/search?q=Al+Zaman%2C+Md+Abdullah&sort=score+desc&sort=date+desc&p=1>Science Explorer (NASA) </a> for the last few years, its not acurate but you will get some idea for sure </p> &nbsp; <img src="cc.png" class="responsive"> 
+  <p style="text-align: justify;">My current research focuses on areas such as astronomical data analysis, exoplanet detection, parameters relevant to exoplanets, galaxy formation, morphology, star formation rates, spectral energy distributions (SEDs), and related topics. From 2020 to 2024, my work has primarily centered on space radiation, space safety, and the design of effective radiation shielding for space missions. I have utilized tools including GEANT4, OLTARIS, SPENVIS, SRIM, NSRL, X-COM, PHY_X/PSD, and MATLAB in my research. Here is a Concept cloud of my research from <a href= https://scixplorer.org/search?q=Al+Zaman%2C+Md+Abdullah&sort=score+desc&sort=date+desc&p=1>Science Explorer (NASA) </a> for the last few years, its not acurate but you will get some idea for sure </p> &nbsp; <img src="cc.png" class="responsive"> 
   </section>
 
 <section id="media" class="content-section" style="text-align: center;">
