--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ I'm passionate about studying Physics and Astronomy, along with recent technolog
     <tr>
       <td>For my Master's Thesis I developed 'SMES-PCC' which stands for Superconducting magnetic energy
 storage(SMES) parameter calculation and characteristics. It is programmed/Developed for both the solenoid and
-toroid configuration. This program is developed in Microsoft Visual Studio 2010. This program is also capable of
+toroid configuration. This program was developed in Microsoft Visual Studio 2010/Visual Basic. This program is also capable of
 showing the relationship between several parameters. <a href= SMES-PCC.exe >Download the .exe file from here</a> Also you can read the paper describing the equations,flowchart and UI for this software from <a href= https://myjms.mohe.gov.my/index.php/masshp/article/view/4917 >here</a>
       <td>
         <div class="image-container">
@@ -293,7 +293,7 @@ showing the relationship between several parameters. <a href= SMES-PCC.exe >Down
       </td>
     </tr>
     <tr>
-      <td>Department 2.0 is an Androids app.It was developed in 2015-2016 using Apache Cordova. Used and loved by many students of Department of Physics at the University of Chittagong, Bangladesh. <a href= SMES-PCC.exe >Download the .apk file from here</a>. It will not work in current versions of Androids probably. It contains the entire syllabus (1st year to Masters) of the Department, contact no of the Faculty members, library assistance and much more. After I left University of Chittagong, Some of my juniors have developed a better version of this which is available on Google Playstore</td>
+      <td>Department 2.0 is an Androids app.It was developed in 2015-2016 using Apache Cordova. Used and loved by many students of Department of Physics at the University of Chittagong, Bangladesh. <a href= Department2.apk >Download the .apk file from here</a>. It will not work in current versions of Androids probably. It contains the entire syllabus (1st year to Masters) of the Department, contact no of the Faculty members, library assistance and much more. After I left University of Chittagong, Some of my juniors have developed a better version of this which is available on Google Playstore</td>
       <td>
         <div class="image-container">
           <img src="d2.png" alt="Image 3">
