--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ showing the relationship between several parameters. <a href= SMES-PCC.exe >Down
       </td>
     </tr>
     <tr>
-      <td>Department 2.0 is an Androids app.It was developed in 2015-2016 using Apache Cordova. Used and loved by many students of Department of Physics at the University of Chittagong, Bangladesh. <a href= Department2.apk >Download the .apk file from here</a>. It will not work in current versions of Androids probably. It contains the entire syllabus (1st year to Masters) of the Department, contact no of the Faculty members, library assistance and much more. After I left University of Chittagong, Some of my juniors have developed a better version of this which is available on Google Playstore</td>
+      <td>Department 2.0 is an Androids app.It was developed in 2015-2016 using Apache Cordova. Used and loved by many students of Department of Physics at the University of Chittagong, Bangladesh. <a href= Department2.apk >Download the .apk file from here</a>. It will not work in current versions of Androids probably. It contains the entire syllabus (1st year to Masters) of the Department, contact no of the Faculty members, library assistance and much more. After my graduation from the University of Chittagong, some of my juniors developed a better version of this, which is available on the Google Play Store.</td>
       <td>
         <div class="image-container">
           <img src="d2.png" alt="Image 3">
