--- a/index.html
+++ b/index.html
@@ -273,6 +273,20 @@ I'm passionate about studying Physics and Astronomy, along with recent technolog
   <table>
   
   <tbody>
+<tr>
+      <td>This Web-Based Tool empowers you to upload your plot and track data points,. Export the data directly as an Excel file. Just follow these steps
+1️⃣ Upload Your Plot: Start by uploading your image (supported formats: .jpg, .png, .gif).
+2️⃣ Pinpoint Your Data: Set up the initial points on your uploaded plot.
+3️⃣ Define Your Axes: Configure the X-min, X-max, Y-min, and Y-max values to match your plot's scale.
+4️⃣ Calibrate with One Click: Hit the "Set Calibration" button for precision tracking.
+5️⃣ Track with Precision: Easily follow the points on your plot.
+6️⃣ Download your data in Excel format with a single click. <a href= https://github.com/Zaman-Abdullah/P2G-Digitize-Your-Plot/blob/16bf7f3321ef73948a56551f3ee323e99f76b12e/index.html>Click here to Use</a>
+	  <td>
+        <div class="image-container">
+          <img src="https://github.com/Zaman-Abdullah/P2G-Digitize-Your-Plot/blob/d7f15354f101e503847e068ad6386c35ad5985c0/logo.png" alt="Image 1">
+        </div>
+      </td>
+    </tr>
     <tr>
       <td>The CSV Plotter tool collects all the headers/variables from a CSV file (That you have uploaded) and can generate Scatter plot and Histogram<a href= csv.html>Click here</a>
 	  <td>
