--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ I'm passionate about studying Physics and Astronomy, along with recent technolog
 3. Configure the X-min, X-max, Y-min, and Y-max values to match your plot's scale.
 4️. Hit the "Set Calibration" button for precision tracking.
 5️. follow the points on your plot.
-6. Download your data in Excel format with a single click. <a href="Zaman-Abdullah/P2G-Digitize-Your-Plot/index.html">Click here to Use</a>
+6. Download your data in Excel format with a single click. <a href=P2G.html>Click here to Use</a>
 	  <td>
         <div class="image-container">
           <img src="logo.png" alt="Image 1">
